# dtek2093_sleep_stage_classification

./: Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-pavel-app4-eog.ipynb  1.0-pavelAlexander-app4-combined.ipynb  2.0-armando-app4-classification.ipynb  2.0-pavelAlexander-app5-combined.ipynb  3.0-armando-app4-classification.ipynb  emg.ipynb
sleep_stage_lib/: __init__.py  datamanip.py  dataset.py  feature_extraction.py  features.py  filtering.py  plots.py
sleep_stage_lib/modeling/: predict.py  train.py  train_that_is_not_script_bc_wtf_why_the_train_we_have_is_a_script.py
