[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sleep_stage_lib"
version = "0.0.1"
description = "DTEK2093 Machine Learning Health Technology Project - Sleep Stage Classification EEG/EOG\u0026EMG (App 4 and App5), University of Turku"
authors = [
  { name = "DTEK2093 Armando Canales Lima, Pavel Ges, Alexander Blomqvist" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["sleep_stage_lib"]
force_sort_within_sections = true


